<resources>
    <string name="app_name">Apte4ka</string>
    <string name="ScanButton">Scan</string>
    <string name="notification_switch">notifications</string>
    <string name="TextFoodList">...</string>
    <string name="def">Def</string>
    <string name="FoodList">Add</string>
    <string name="FoodListEditHint">Name</string>
    <string name="FoodListEditDataHint">YYYY-MM-DD</string>
    <string name="permission_camera_rationale">true</string>
    <string name="ok">ok</string>
    <string name="low_storage_error">low_storage_error</string>
    <string name="no_camera_permission">true</string>
    <string name="BackButton">Back</string>
    <string name="no_text_input">Input name and expire date </string>






</resources>