<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="357dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textAlignment="center" />


    <Button
        android:id="@+id/ScanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/FoodListEditData"

        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/addProductButton"
        android:onClick="startScanText"
        android:text="@string/ScanButton"
        android:textAlignment="center" />

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/FoodListEditData"

        android:layout_alignStart="@+id/app_name"

        android:layout_centerInParent="true"
        android:enabled="true"
        android:text="@string/FoodList"
        android:visibility="visible" />

    <EditText
        android:id="@+id/FoodListEditText"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_alignStart="@+id/app_name"
        android:layout_alignEnd="@+id/app_name"
        android:enabled="true"
        android:hint="@string/FoodListEditHint"
        android:minHeight="48dp"
        android:text=""
        android:visibility="visible" />

    <EditText
        android:id="@+id/FoodListEditData"
        android:layout_width="352dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/FoodListEditText"

        android:layout_alignStart="@+id/app_name"
        android:layout_alignEnd="@+id/app_name"

        android:layout_centerInParent="true"
        android:enabled="true"
        android:hint="@string/FoodListEditDataHint"
        android:inputType="date"
        android:minHeight="48dp"
        android:text=""
        android:visibility="visible" />

    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/FoodListEditData"
        android:layout_alignEnd="@+id/app_name"


        android:layout_toEndOf="@+id/ScanButton"
        android:text="@string/notification_switch"
        android:textSize="20sp"
        tools:ignore="SmallSp,UseSwitchCompatOrMaterialXml" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/ScanButton"
        android:layout_alignStart="@+id/app_name"
        android:layout_alignEnd="@+id/app_name"
        android:layout_toEndOf="@+id/app_name">

        <TextView
            android:id="@+id/TextFoodList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextFoodList" />


    </ScrollView>


</RelativeLayout>